--- a/index.html
+++ b/index.html
@@ -2,10 +2,90 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruang Belajar Online</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f5f6fa;
+            color: #333;
+        }
+        header {
+            background: linear-gradient(135deg, #4C74FF, #6A9CFF);
+            color: white;
+            padding: 60px 20px;
+            text-align: center;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+        }
+        header h1 {
+            font-size: 40px;
+            margin: 0;
+        }
+        header p {
+            margin-top: 10px;
+            font-size: 18px;
+        }
+        .container {
+            max-width: 900px;
+            margin: 40px auto;
+            padding: 20px;
+        }
+        .card {
+            background: white;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            transition: 0.3s;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+        }
+        h2 {
+            margin-top: 0;
+        }
+        footer {
+            background: #fff;
+            text-align: center;
+            padding: 20px;
+            margin-top: 40px;
+            color: #666;
+            border-top: 1px solid #ddd;
+        }
+    </style>
 </head>
 <body>
-    <h1>Selamat Datang di Ruang Belajar Online</h1>
-    <p>Blog edukasi untuk berbagi ilmu dan inspirasi belajar.</p>
+    <header>
+        <h1>Ruang Belajar Online</h1>
+        <p>Tempat belajar modern untuk berbagi ilmu, inspirasi, dan produktivitas.</p>
+    </header>
+
+    <div class="container">
+        <div class="card">
+            <h2>📘 Artikel Terbaru</h2>
+            <p>Selamat datang! Ini adalah ruang tempat kamu belajar apa saja, kapan saja. Nantinya kamu bisa menambahkan artikel, tutorial, dan catatan belajar di bagian ini.</p>
+        </div>
+
+        <div class="card">
+            <h2>🚀 Tips Belajar Produktif</h2>
+            <ul>
+                <li>Atur jadwal belajar yang konsisten</li>
+                <li>Gunakan metode pomodoro</li>
+                <li>Mencatat poin penting saat belajar</li>
+                <li>Belajar di tempat yang rapi dan nyaman</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>🎧 Rekomendasi Musik Fokus</h2>
+            <p>Musik instrumental, lo-fi, atau ambient dapat membantu konsentrasi saat belajar.</p>
+        </div>
+    </div>
+
+    <footer>
+        <p>© 2025 Ruang Belajar Online — Dibuat dengan semangat belajar ✨</p>
+    </footer>
 </body>
 </html>
