--- a/index.html
+++ b/index.html
@@ -5,87 +5,161 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruang Belajar Online</title>
     <style>
+        :root {
+            --primary: #2563eb;
+            --primary-dark: #1e4ec7;
+            --bg: #f8fafc;
+            --text: #1e293b;
+        }
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
-            background: #f5f6fa;
-            color: #333;
+            font-family: "Segoe UI", sans-serif;
+            background: var(--bg);
+            color: var(--text);
         }
-        header {
-            background: linear-gradient(135deg, #4C74FF, #6A9CFF);
-            color: white;
-            padding: 60px 20px;
+        /* NAVBAR */
+        nav {
+            background: white;
+            padding: 15px 40px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+        nav h1 {
+            font-size: 22px;
+            color: var(--primary);
+            margin: 0;
+        }
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 20px;
+            margin: 0;
+        }
+        nav ul li a {
+            text-decoration: none;
+            color: var(--text);
+            font-weight: 600;
+            transition: 0.2s;
+        }
+        nav ul li a:hover {
+            color: var(--primary);
+        }
+
+        /* HERO SECTION */
+        .hero {
+            padding: 80px 20px;
             text-align: center;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            background: linear-gradient(135deg, #2563eb, #4f8bff);
+            color: white;
         }
-        header h1 {
-            font-size: 40px;
-            margin: 0;
+        .hero h2 {
+            font-size: 42px;
+            margin-bottom: 10px;
         }
-        header p {
-            margin-top: 10px;
+        .hero p {
             font-size: 18px;
+            max-width: 600px;
+            margin: auto;
         }
+
+        /* CONTENT */
         .container {
-            max-width: 900px;
+            max-width: 1100px;
             margin: 40px auto;
-            padding: 20px;
+            padding: 0 20px;
+        }
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
         }
         .card {
             background: white;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            padding: 25px;
+            border-radius: 14px;
+            box-shadow: 0 4px 14px rgba(0,0,0,0.08);
             transition: 0.3s;
         }
         .card:hover {
-            transform: translateY(-5px);
+            transform: translateY(-6px);
         }
-        h2 {
+        .card h3 {
             margin-top: 0;
         }
+
+        /* FOOTER */
         footer {
-            background: #fff;
+            background: #1e293b;
+            color: #cbd5e1;
+            padding: 30px;
             text-align: center;
-            padding: 20px;
-            margin-top: 40px;
-            color: #666;
-            border-top: 1px solid #ddd;
+            margin-top: 50px;
         }
     </style>
 </head>
 <body>
-    <header>
+    <nav>
         <h1>Ruang Belajar Online</h1>
-        <p>Tempat belajar modern untuk berbagi ilmu, inspirasi, dan produktivitas.</p>
-    </header>
+        <ul>
+            <li><a href="#">Beranda</a></li>
+            <li><a href="#">Artikel</a></li>
+            <li><a href="#">Kursus</a></li>
+            <li><a href="#">Tentang</a></li>
+        </ul>
+    </nav>
+
+    <section class="hero">
+        <h2>Belajar Lebih Mudah, Kapan Saja</h2>
+        <p>Platform edukasi untuk pelajar dan pembelajar mandiri. Temukan artikel, materi pembelajaran, dan tips produktif untuk meningkatkan kemampuanmu.</p>
+    </section>
 
     <div class="container">
-        <div class="card">
-            <h2>📘 Artikel Terbaru</h2>
-            <p>Selamat datang! Ini adalah ruang tempat kamu belajar apa saja, kapan saja. Nantinya kamu bisa menambahkan artikel, tutorial, dan catatan belajar di bagian ini.</p>
-        </div>
+        <h2>📚 Materi Pilihan</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>Matematika</h3>
+                <p>Kumpulan rumus, trik cepat, dan pembahasan soal.</p>
+            </div>
 
-        <div class="card">
-            <h2>🚀 Tips Belajar Produktif</h2>
-            <ul>
-                <li>Atur jadwal belajar yang konsisten</li>
-                <li>Gunakan metode pomodoro</li>
-                <li>Mencatat poin penting saat belajar</li>
-                <li>Belajar di tempat yang rapi dan nyaman</li>
-            </ul>
-        </div>
+            <div class="card">
+                <h3>Bahasa Indonesia</h3>
+                <p>Materi cerpen, puisi, ejaan, dan teknik menulis.</p>
+            </div>
 
-        <div class="card">
-            <h2>🎧 Rekomendasi Musik Fokus</h2>
-            <p>Musik instrumental, lo-fi, atau ambient dapat membantu konsentrasi saat belajar.</p>
+            <div class="card">
+                <h3>Teknologi</h3>
+                <p>Pengenalan coding, website, dan literasi digital.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <h2>📝 Artikel Terbaru</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>Cara Belajar Efektif untuk Pelajar</h3>
+                <p>Teknik memaksimalkan waktu belajar tanpa stres.</p>
+            </div>
+
+            <div class="card">
+                <h3>Mengenal GitHub untuk Pemula</h3>
+                <p>Panduan ringkas membuat website dengan GitHub Pages.</p>
+            </div>
+
+            <div class="card">
+                <h3>Tips Fokus Saat Belajar</h3>
+                <p>Ciptakan lingkungan belajar yang nyaman dan produktif.</p>
+            </div>
         </div>
     </div>
 
     <footer>
-        <p>© 2025 Ruang Belajar Online — Dibuat dengan semangat belajar ✨</p>
+        <p>© 2025 Ruang Belajar Online • Platform Edukasi Modern</p>
     </footer>
 </body>
 </html>
