--- a/index.html
+++ b/index.html
@@ -4,162 +4,205 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruang Belajar Online</title>
+
     <style>
+        /* ===== AESTHETIC PASTEL + GLASSMORPHISM ===== */
         :root {
-            --primary: #2563eb;
-            --primary-dark: #1e4ec7;
-            --bg: #f8fafc;
-            --text: #1e293b;
+            --primary: #7aa7ff;
+            --secondary: #ffb3d9;
+            --bg: #f3f6ff;
+            --glass-bg: rgba(255, 255, 255, 0.45);
+            --glass-border: rgba(255, 255, 255, 0.25);
+            --text: #2a2a2a;
         }
+
         body {
             margin: 0;
-            font-family: "Segoe UI", sans-serif;
+            font-family: "Poppins", sans-serif;
             background: var(--bg);
             color: var(--text);
         }
+
         /* NAVBAR */
         nav {
-            background: white;
+            backdrop-filter: blur(10px);
+            background: var(--glass-bg);
+            border-bottom: 1px solid var(--glass-border);
             padding: 15px 40px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.08);
             position: sticky;
             top: 0;
             z-index: 100;
         }
         nav h1 {
-            font-size: 22px;
-            color: var(--primary);
+            font-size: 24px;
+            font-weight: 700;
+            background: linear-gradient(45deg, var(--primary), var(--secondary));
+            -webkit-background-clip: text;
+            color: transparent;
             margin: 0;
         }
         nav ul {
-            list-style: none;
             display: flex;
             gap: 20px;
+            list-style: none;
             margin: 0;
         }
         nav ul li a {
             text-decoration: none;
-            color: var(--text);
             font-weight: 600;
-            transition: 0.2s;
+            color: #444;
+            transition: 0.3s;
         }
         nav ul li a:hover {
             color: var(--primary);
         }
 
-        /* HERO SECTION */
+        /* HERO */
         .hero {
-            padding: 80px 20px;
+            padding: 90px 20px;
             text-align: center;
-            background: linear-gradient(135deg, #2563eb, #4f8bff);
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
             color: white;
         }
         .hero h2 {
-            font-size: 42px;
+            font-size: 48px;
             margin-bottom: 10px;
         }
         .hero p {
             font-size: 18px;
-            max-width: 600px;
+            max-width: 700px;
             margin: auto;
         }
 
-        /* CONTENT */
+        /* CONTENT WRAPPER */
         .container {
             max-width: 1100px;
             margin: 40px auto;
             padding: 0 20px;
         }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-        }
+
+        /* CARDS WITH GLASS EFFECT */
         .card {
-            background: white;
+            background: var(--glass-bg);
+            border: 1px solid var(--glass-border);
+            backdrop-filter: blur(10px);
             padding: 25px;
-            border-radius: 14px;
-            box-shadow: 0 4px 14px rgba(0,0,0,0.08);
-            transition: 0.3s;
+            border-radius: 18px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.05);
+            transition: 0.3s ease;
         }
         .card:hover {
             transform: translateY(-6px);
         }
-        .card h3 {
-            margin-top: 0;
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 25px;
+        }
+
+        /* GALLERY */
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .gallery img {
+            width: 100%;
+            border-radius: 14px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            transition: 0.3s;
+        }
+        .gallery img:hover {
+            transform: scale(1.05);
         }
 
         /* FOOTER */
         footer {
-            background: #1e293b;
-            color: #cbd5e1;
+            background: #1e1e1e;
+            color: #ccc;
             padding: 30px;
             text-align: center;
-            margin-top: 50px;
+            margin-top: 60px;
         }
     </style>
 </head>
+
 <body>
+    <!-- NAVBAR -->
     <nav>
         <h1>Ruang Belajar Online</h1>
         <ul>
             <li><a href="#">Beranda</a></li>
-            <li><a href="#">Artikel</a></li>
-            <li><a href="#">Kursus</a></li>
-            <li><a href="#">Tentang</a></li>
+            <li><a href="#artikel">Artikel</a></li>
+            <li><a href="#galeri">Galeri</a></li>
+            <li><a href="#tentang">Tentang</a></li>
         </ul>
     </nav>
 
+    <!-- HERO -->
     <section class="hero">
-        <h2>Belajar Lebih Mudah, Kapan Saja</h2>
-        <p>Platform edukasi untuk pelajar dan pembelajar mandiri. Temukan artikel, materi pembelajaran, dan tips produktif untuk meningkatkan kemampuanmu.</p>
+        <h2>Belajar Jadi Lebih Menyenangkan</h2>
+        <p>Website edukasi dengan tampilan aesthetic, modern, dan profesional. Belajar kapan saja, dimana saja dengan gaya yang kamu suka!</p>
     </section>
 
+    <!-- MATERI PILIHAN -->
     <div class="container">
-        <h2>📚 Materi Pilihan</h2>
+        <h2>📘 Materi Pilihan</h2>
         <div class="grid">
             <div class="card">
                 <h3>Matematika</h3>
-                <p>Kumpulan rumus, trik cepat, dan pembahasan soal.</p>
+                <p>Pembahasan lengkap, latihan soal, dan trik cepat.</p>
             </div>
-
             <div class="card">
                 <h3>Bahasa Indonesia</h3>
-                <p>Materi cerpen, puisi, ejaan, dan teknik menulis.</p>
+                <p>Materi cerpen, puisi, esai, hingga kaidah EYD.</p>
             </div>
-
             <div class="card">
-                <h3>Teknologi</h3>
-                <p>Pengenalan coding, website, dan literasi digital.</p>
+                <h3>Teknologi Digital</h3>
+                <p>Pengenalan coding, internet, dan keterampilan digital.</p>
             </div>
         </div>
     </div>
 
-    <div class="container">
+    <!-- ARTIKEL TERBARU -->
+    <div class="container" id="artikel">
         <h2>📝 Artikel Terbaru</h2>
         <div class="grid">
             <div class="card">
-                <h3>Cara Belajar Efektif untuk Pelajar</h3>
-                <p>Teknik memaksimalkan waktu belajar tanpa stres.</p>
+                <h3>Cara Belajar Efektif</h3>
+                <p>Strategi agar belajar lebih optimal dan fokus.</p>
             </div>
-
             <div class="card">
-                <h3>Mengenal GitHub untuk Pemula</h3>
-                <p>Panduan ringkas membuat website dengan GitHub Pages.</p>
+                <h3>Mengenal GitHub Pages</h3>
+                <p>Panduan membuat website gratis dengan mudah.</p>
             </div>
-
             <div class="card">
                 <h3>Tips Fokus Saat Belajar</h3>
-                <p>Ciptakan lingkungan belajar yang nyaman dan produktif.</p>
+                <p>Ciptakan suasana belajar yang nyaman dan produktif.</p>
             </div>
         </div>
     </div>
 
+    <!-- GALERI GAMBAR -->
+    <div class="container" id="galeri">
+        <h2>📷 Galeri Belajar</h2>
+        <p>Kumpulan gambar aesthetic bertema ruang belajar.</p>
+        <div class="gallery">
+            <img src="https://source.unsplash.com/600x400/?study,desk" alt="Belajar 1">
+            <img src="https://source.unsplash.com/600x400/?laptop,workspace" alt="Belajar 2">
+            <img src="https://source.unsplash.com/600x400/?student,online" alt="Belajar 3">
+            <img src="https://source.unsplash.com/600x400/?notebook,study" alt="Belajar 4">
+        </div>
+    </div>
+
+    <!-- FOOTER -->
     <footer>
-        <p>© 2025 Ruang Belajar Online • Platform Edukasi Modern</p>
+        <p>© 2025 Ruang Belajar Online • Website Edukasi Modern Aesthetic</p>
     </footer>
 </body>
 </html>
